--- a/main.css
+++ b/main.css
@@ -90,7 +90,7 @@ a {
 #header2 {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
-	background-color: #151313;
+	background-color: #2a2e31;
 	grid-column: 2;
 	grid-row: 1;
 }
@@ -122,7 +122,7 @@ a {
 
 #sidebar {
 	position: relative;
-	background-color: #151313;
+	background-color: #2a2e31;
 	grid-column: 1;
 	grid-row: 2;
 }
