--- a/desktop/desktop.css
+++ b/desktop/desktop.css
@@ -89,8 +89,8 @@ a {
 
 #header2 {
 	display: grid;
-	grid-template-columns: repeat(5, 1fr);
-	background-color: #2a2e31;
+	grid-template-columns: repeat(8, 1fr);
+	background-color: #27262b;
 	grid-column: 2;
 	grid-row: 1;
 }
@@ -122,7 +122,7 @@ a {
 
 #sidebar {
 	position: relative;
-	background-color: #2a2e31;
+	background-color: #27262b;
 	grid-column: 1;
 	grid-row: 2;
 }
@@ -242,9 +242,9 @@ canvas {
 	display: grid;
 	grid-template-columns: 60% 25% 10% 5%;
 	grid-template-rows: 100%;
-	color: black;
-	background-color: white;
-	box-shadow: #6f6f6f 0 0 20px 0px;
+	color: white;
+	background-color: #1c1c1c;
+	box-shadow: #242424 0 0 20px 0px;
 }
 
 #directoryHeader p {
@@ -272,7 +272,7 @@ canvas {
 .item {
 	display: grid;
 	cursor: pointer;
-	border-bottom: 1px solid white;
+	border-bottom: 1px solid #222;
 	background-color: rgba(255,255,255,0.03);
 	grid-template-columns: 4% 56% 25% 10% 5%;
 	grid-template-rows: 100%;
