--- a/index.css
+++ b/index.css
@@ -1,7 +1,11 @@
 html, body {
+	min-height: 100%;
 	height: 100%;
 	margin: 0;
 	font-family: 'Roboto Slab', sans-serif;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	-webkit-tap-highlight-color: transparent;
+	overflow: hidden;
 }
 
 body {
@@ -17,8 +21,6 @@ body {
 }
 
 #canvas {
-	width: 100%;
-	height: 100%;
 	top: 0;
 	left: 0;
 	position: absolute;
@@ -27,15 +29,18 @@ body {
 
 #formContainer {
 	margin: auto;
-	padding: 5%;
 	background-color: #27262b;
 	color: #fefefe;
 	box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.12);
 	border-radius: 2px;
 }
 
-#formContainer div {
+#formContainer #formSizeWrapper {
 	height: 100%;
+	padding: 10%;
+}
+
+#formContainer #formSizeWrapper div {
 	position: relative;
 }
 
