Window resizing added, can download files

--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -6,7 +6,6 @@
 	<title>BinBin</title>
 	<link rel="icon" href="./assets/favicon.ico?v=2">
 	<link rel="stylesheet" href="./css/desktop.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Saira+Condensed:300,400" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -16,7 +15,7 @@
 
 <body>
 	<div id="sidebar">
-	  	<div id="header1" class="transition">
+		<div id="header1" class="transition">
 			<h1>BinBin</h1>
 		</div>
 		<div id="sidebarItems"></div>
@@ -58,6 +57,6 @@
 	<input id="copy" readonly> 
 </body>
 <script src="./js/tools.js"></script>
+<script src="./js/alert.js"></script>
 <script src="./js/desktop.js"></script>
-<script src="./js/visualizer.js"></script>
 </html>
