--- a/css/mobile.css
+++ b/css/mobile.css
@@ -16,7 +16,7 @@ body {
 	padding: 0;
 	margin: 0;
 	color: white;
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'Saira Condensed', sans-serif;
 	grid-template-columns: 100%;
 	grid-template-rows: 8% 6% auto;
 }
@@ -72,10 +72,6 @@ a {
 	box-shadow: 1px 0px 12px 1px black;
 }
 
-#sidebar div:nth-child(2) {
-	margin-top: 20%;
-}
-
 #sidebar span {
 	font-size: 110%;
 	padding: 5%;
@@ -95,6 +91,16 @@ a {
 	width: 100%;
 	cursor: pointer;
 	grid-template-columns: 1fr 3fr 7fr;
+}
+
+.naviHead {
+	background-color: rgba(0,0,0,0.4);
+	padding: 3%;
+	font-weight: 300;
+}
+
+.naviHead:first-child {
+	margin-top: 6vh;
 }
 
 .naviInner {
@@ -168,9 +174,10 @@ a {
 	grid-row: 1;
 	grid-column: 2;
 	font-size: 120%;
+	font-weight: 300;
 }
 
-.item .modified {
+.item .otherInfo {
 	grid-row: 2;
 	grid-column: 2;
 	font-size: 80%;
