--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -1,18 +1,18 @@
 <div id="header">
-	<div class="transition">
+	<div id="barOpen" class="transition">
 		<i class="fa fa-bars transition"></i>
 	</div>
 	<h1>BinBin</h1>
-	<div class="transition">
+	<div id="dotOpen" class="transition">
 		<i class="fa fa-ellipsis-v"></i>
 	</div>
 </div>
 <div id="directoryHeader">
-	<p id="location" class="transition">BinBin</p>
-	<p class="transition">Name</p>
-	<i class="fa fa-arrow-up transition"></i>
+	<p id="location" class="transition"></p>
+	<p id="sortType" class="transition">Name</p>
+	<i id="sortDirection" class="fa fa-arrow-up transition"></i>
 </div>
-<div id="sidebar" class="transition">
+<div id="sidebar" class="transition closeable">
 	<div id="sidebarItems"></div>
 	<span>Developed by <p onclick="window.open('https://github.com/ksjdragon/binbin.git','_blank')">ksjdragon</p></span>
 </div>
@@ -26,10 +26,10 @@
 </div>
 <div id="menuOverlay" class="transition">
 	<div id="optionContainer" class="transition">
-		<p>Sort by</p>
-		<p>Name</p>
-		<p>Date</p>
-		<p>Size</p>
+		<p id='sortText'>Sort by</p>
+		<p id='sortName'>Name</p>
+		<p id='sortDate'>Date</p>
+		<p id='sortSize'>Size</p>
 	</div>
 </div>
 <input id="copy" readonly>
