Added audio, cleanup

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,9 @@
             <h1>BinBin</h1>
             <form id="login" onsubmit="login(form);">
                 <p>Username:</p>
-                <input class="transition" type="text" name="username">
+                <input class="transition noSelect" type="text" name="username">
                 <p>Password:</p>
-                <input class="transition" type="password" name="password">
+                <input class="transition noSelect" type="password" name="password">
             </form>
             <div>
                 <button class="transition" onclick="login(get('#login'));" >Login</button>
