--- a/css/desktop.css
+++ b/css/desktop.css
@@ -31,12 +31,6 @@
 html {
 	height: 100%;
 	width: 100%;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none; 
-	-khtml-user-select: none; 
-	-moz-user-select: none; 
-	-ms-user-select: none;
-	user-select: none;	
 }
 
 body {
@@ -62,6 +56,15 @@ a {
 	transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 	-moz-transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 	-ms-transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+}
+
+.noSelect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #header1 {
@@ -380,10 +383,6 @@ canvas {
 	grid-template-columns: 30% 40% 15% 15%;
 	grid-template-rows: 100%;
 	background-color: rgba(255,255,255,0.1);
-}
-
-audio {
-	display: none;
 }
 
 #playback div {
